# Stager

./: README.md  Stager.m  StagerClient.m  aogui.m  aoguitest.m  index.html  params.json
+devices/: mockDevice.m  nidaqmxDevice.m
+devices/+gui/: controller.m  startStandAloneMock.m  startStandAloneNIDAQMX.m  view.m
+devices/private/: addAO.mexw64  addDO.mexw64  destroy.mexw64  deviceNames.mexw64  taskNames.mexw64  writeAO.mexw64  writeDO.mexw64
+stager/: StagerClientStreamer.m
+stager/+components/: ROISelector.m  Server.m  TSTracer.m
+stager/+stack/: Frame.m  Roi.m  Stack.m
Guis/: roiSelector.fig  roiSelector.m  tsTracer.fig  tsTracer.m
SandBox/: 3DVisualizationROI.m  TimeSeries.m  test.json  test.m  timeSeriesPlot.m
SandBox/+test/: answer.m  send.m
device/: CMakeLists.txt  build.ps1
device/src/: CMakeLists.txt  addAO.c  addDO.c  destroy.c  deviceNames.c  err.c  writeAO.c  writeDO.c
mex/: CMakeLists.txt  build.ps1
mex/src/: CMakeLists.txt  addAO.c  addDO.c  destroy.c  err.c  taskNames.c
mex/src/cmake/: daqmx-config.cmake
